# c-matrix

./: CMakeLists.txt  Doxyfile
include/c_matrix/: matrix.h  matrix_internal.h
sources/: CMakeLists.txt
sources/c_matrix/: CMakeLists.txt  matrix.c
tests/: CMakeLists.txt  main.c
tests/c_matrix/: c_matrix_test.h
